# reef

./: .flake8  .gitignore  _types.py  cards.py  check.sh  engine.py  fmt.py  main.py  mcts_viz.py  rules.py  score.py  strategies.py  test.py  utils.py
client/: agent.py  main.py
common/: main.py  redis_stream_reader.py
connect4/: _types.py  fmt.py  heuristic.py  main.py  rules.py
engine/: mctsv1.py  typesv1.py
engineserver/: main.py
gameserver/: redis_stream_reader.py
python/: mcts_viz.py  utils.py
python/client/: agent.py
python/common/: main.py  redis_stream_reader.py  types.py
python/connect4/: heuristic.py  rules.py
python/engine/: mctsv1.py  minimax.py
python/reef/: _types.py  engine.py  score.py
python/reef/tests/: test.py
python/t2048/: fmt.py  main.py  rules.py
reef/: _types.py  fmt.py  main.py  rules.py  score.py
reef/tests/: strategies.py
rust/: Cargo.toml
rust/engine/: Cargo.toml
rust/src/connect4/: main.rs
rust/src/engine/: lib.rs
rust/src/t2048/: main.rs  mod.rs  rules.rs
rust/t2048/: Cargo.toml
rust/t2048/src/: main.rs  rules.rs
t2048/: _types.py  main.py  rules.py
utility/: check.sh  profile
