[package]
name = "mcts"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "2048"
path = "src/t2048/main.rs"

[[bin]]
name = "connect4"
path = "src/connect4/main.rs"

[lib]
name = "engine"
path = "src/engine/lib.rs"


[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
rand = "0.8.5"
itertools = "0.12.0"
