[package]
name = "t2048"
version = "0.1.0"
edition = "2021"

# Library configuration
[lib]
name = "t2048"  # You can name your library to distinguish it from the binary
# path = "rules.rs"   # Path to the library entry point, if it's not lib.rs

# Binary configuration
[[bin]]
name = "t2048-main"      # Name of the binary
path = "src/main.rs"    # Path to the binary entry point

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
rand = "0.8.5"
